# Projeto-workout-FastApi

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0f1f270d2eef_testando_correção_em_models_de_atleta.py  13e381cd2cc2_testando_correção_em_models_de_atleta_.py  24f1fc692875_dddd.py  35e29956e90d_corrigindo_endereco_na_tabela_ct.py  39f73c558098_testando_criação_das_tabelas_de_workout.py  45e654438e35_add_centrotreinamentomodel.py  4a2efc3d1fc5_corrigindo_outro_erro_na_tabela_atleta.py  50787133d55a_testando_criação_das_tabelas_de_workout.py  63791eb31062_add_centrotreinamentomodel.py  73559b172e33_testando_criação_das_tabelas_de_workout.py  9d62b730fdca_testando_correção_em_models_de_atleta.py  ae53063b7e8a_ccccc.py  b2e2b6549dc0_aaaaa.py  c5bd1421bf00_corrigindo_erro_na_tabela_atleta.py  ddabdf12522f_testando_criação_das_tabelas_de_workout.py  e652f8503b00_bbbb.py  eaa712dce74f_testando_criação_das_tabelas_de_workout.py  f4a64a08a483_ccccc.py
workout_api/: main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/contrib/: models.py  schemas.py
